# bsp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
src/: bsp.rs  error.rs  lib.rs  main.rs  trace.rs  workshop.rs
src/bsp/: math.rs  native.rs  polygon.rs
